Stop background from covering menu when returning from ingame
Fixes a bug where the main menu's background, which is hidden in-game, will cover the whole main menu when you return back to the main menu.

--- a/code/UI/GameMenu/GameMenu.razor.scss
+++ b/code/UI/GameMenu/GameMenu.razor.scss
@@ -17,6 +17,11 @@
 
     &.ingame {
         background-color: #151313ee;
+        opacity: 0.7;
+        
+        & .background {
+            display: none;
+        }
     }
 }
 
@@ -31,10 +36,6 @@
     mask: linear-gradient( 45deg, white, white, black );
     mask-scope: filter;
     background-repeat: no-repeat;
-
-    &.ingame {
-        display: none;
-    }
 }
 
 .navigator-canvas {
